# stock-market

./: .env.example  .gitignore  AGENTS.md  AUDIT_PHASE1.md  AUDIT_REPORT.md  COMPLETE_PRODUCTION_AUDIT_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.txt  COMPREHENSIVE_AUDIT_ROADMAP.md  DEPLOYMENT_CHECKLIST.sh  DEVELOPMENT_ROADMAP.md  DOCKER_TO_LOCAL_MIGRATION.md  DOCUMENTATION_INDEX.md  FINAL_AUDIT_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_SETUP_INSTRUCTIONS.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_ROADMAP_CLEAN.md  LOCAL_SETUP.md  Makefile  PHASE0_1_2_BLUEPRINT.md  PHASE11_COMPLETE.md  PHASE11_FINAL_VALIDATION.md  PHASE12_QUICKSTART.md  PHASE1_COMPLETION.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PHASE9_IMPLEMENTATION.md  PLATFORM_SUMMARY.md  POSTGRES_LOCAL_SETUP.md  PRODUCTION_READINESS_REPORT.md  PROGRESS_REPORT_PHASE11.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SETUP_STATUS.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_WINDOWS.md  README-DEMO.md  README.md  README_LOCAL_WINDOWS_SETUP.txt  README_PHASE11.md  (+36 more)
backend/: .env copy  .env.example  Dockerfile  __init__.py  alembic.ini  backend-test-output.txt  dev.db  main-env.txt  pyproject.toml  requirements-ci.txt  requirements-core.txt  requirements-dev.txt  requirements.txt  run_uvicorn.py  test_api.py  test_prediction.py  verify_determinism.py  verify_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_timescale_hypertables.py  0003_auth_billing_content_notifications.py  0004_csrf_indexes.py  0005_add_journal_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: quantedge_router.py
backend/app/core/: celery_app.py  config.py  csrf.py  database.py  dependencies.py  events.py  logging.py  middleware.py  request_id_middleware.py  security.py  structured_logging.py  test_state.py  websocket_manager.py
backend/app/database/: __init__.py  connection.py  mongodb.py  redis_client.py
backend/app/models/: __init__.py  alert.py  asset.py  auth_token.py  backtest.py  blog.py  csrf_token.py  email_job.py  feature_vectors.py  journal.py  notification.py  ohlcv.py  paper_trading.py  payment.py  portfolio.py  prediction.py  regime_states.py  sentiment.py  signal.py  transactions.py  user.py
backend/app/research/: __init__.py
backend/app/schemas/: __init__.py  auth.py  backtest.py  errors.py  explain.py  intelligence.py  journal.py  market.py  monitor.py  payments.py  portfolio.py  prediction.py  regime.py  screener.py  signal.py
backend/app/services/: MarketDataFeed_pb2.py  alert_engine.py  broker_adapter.py  email_service.py  intelligence_service.py  market_data_service.py  nse_service.py  paper_trading.py  prediction_engine.py  sentiment_analyzer.py  signal_engine.py  sr_service.py  upstox_service.py
backend/app/websocket/: connection_manager.py  price_broadcaster.py  price_ticker.py  router.py  signal_broadcaster.py
backend/pipelines/: data_pipeline.py  inference_pipeline.py  retraining_trigger.py  training_pipeline.py
backend/research/: __init__.py
backend/scripts/: compute_features.py  data_pipeline.py  init_dev_db.py  model_trainer.py  run_individual_model_backtests.py  run_sequential_build.py  run_walk_forward_backtest.py  seed_universe.py  tick_producer.py  train_all_checkpoints.py  train_meta_learner.py  train_quantile_forecaster.py  verify_schema.py
backend/tasks/: backtest_tasks.py  celery_app.py  data_tasks.py  email_tasks.py  training_tasks.py
backend/tests/: conftest.py  test_phase1_database.py
(+463 files in other folders)
